<resources>
    <string name="app_name">Song App</string>
    <string name="search_hint">Search songs…</string>
    <string name="loading_songs">Loading songs…</string>
    <string name="label_all">All</string>
    <string name="label_remote">Remote</string>
    <string name="label_local">Local</string>
    <string name="repositories">Repositories</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="genre">Genre:&#160;</string>
    <string name="year">Release year:&#160;</string>
    <string name="album">Album:&#160;</string>
    <string name="sort_by">Sort by</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="release_year">Release year</string>
    <string name="songs_loading_error">Could not download any songs for specified search query!</string>
    <string name="clear_filters">Clear filters</string>
    <string name="filters">Filters</string>
    <string name="clear">Clear</string>
</resources>
