<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:enabled="false"
        android:title="@string/repositories"/>

    <group
        android:id="@+id/menu_group_repositories"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:checked="true"
            android:title="@string/label_all"/>
        <item
            android:id="@+id/nav_local"
            android:title="@string/label_local"/>
        <item
            android:id="@+id/nav_remote"
            android:title="@string/label_remote"/>
    </group>

    <item
        android:enabled="false"
        android:title="@string/sort_by"/>

    <group
        android:id="@+id/menu_group_sort"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sort_title"
            android:checked="true"
            android:title="@string/title"/>
        <item
            android:id="@+id/sort_artist"
            android:title="@string/artist"/>
        <item
            android:id="@+id/sort_year"
            android:title="@string/release_year"/>
    </group>

    <item
        android:enabled="false"
        android:title="@string/filters"/>

    <item
        android:id="@+id/clear_filters"
        android:title="@string/clear_filters"/>

</menu>
